<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="appId">b1b15e88fa797225412429c1c50c122a</string>
    <string name="apiKey">AIzaSyDF0j0B7T-n0TILilLDih3ABbGQREjxEGo</string>
    <string name="tv_weather_header_city">London</string>
    <string name="tv_weather_header_date">12-03-2016</string>
    <string name="tv_weather_header_day">Saturday</string>
    <string name="tv_weather_default_temp">23</string>
    <string name="tv_weather_default_temp_unit">C</string>
    <string name="tv_weather_default_min_max_temp">21C / 25C</string>
    <string name="tv_weather_description">Drizzle</string>
    <string name="tv_weather_field_pressure">Pressure</string>
    <string name="tv_weather_default_pressure">54</string>
    <string name="tv_weather_field_sunrise">Sunrise Time</string>
    <string name="tv_weather_default_sunrise">06:34</string>
    <string name="tv_weather_field_sunset">Sunset Time</string>
    <string name="tv_weather_default_sunset">17:31</string>
    <string name="tv_weather_field_humidity">Humidity</string>
    <string name="tv_weather_default_humidity">120</string>
    <string name="tv_wind_title">Wind</string>
    <string name="tv_wind_field_speed">Wind Speed</string>
    <string name="tv_wind_default_speed">25MPH</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search City</string>
    <string name="toolbar_search_view">Search</string>
    <string name="tv_weather_min_max_temp">Temp Min / Max</string>
    <string name="error_search_empty_text">Search can\'t be Empty</string>
    <string name="autocomplete_text">Search City</string>
    <string name="tv_wind_field_degree">Wind Direction</string>
    <string name="tv_wind_default_degree">0</string>

</resources>